xong rate product